# Jank_engine

./: .gitignore  Angle.cpp  Angle.h  CMakeLists.txt  Direction.cpp  Direction.h  FindSDL2.cmake  FindSDL2_IMAGE.cmake  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Object.cpp  Object.h  PhysicsScalar.cpp  PhysicsScalar.h  PhysicsVector.cpp  PhysicsVector.h  SchizoIterator.cpp  SchizoIterator.h  SchizoMap.cpp  SchizoMap.h  TODO.md  TheFirstMover.cpp  TheFirstMover.h  Unit.cpp  Unit.h  glut.h  main.cpp
